Fix table actions on mobile
Remove deprecated css for table

--- a/app/assets/stylesheets/partials/admin/_framework_and_overrides.css.sass
+++ b/app/assets/stylesheets/partials/admin/_framework_and_overrides.css.sass
@@ -215,9 +215,10 @@ table
         .text
           display: none
 
-    td.actions, td.id
-      width: 1%
-      white-space: nowrap
+    +downfrom-tablet
+      td.actions, td.id
+        width: 1%
+        white-space: nowrap
 
 .col-md-6, .col-sm-6
   .pagination span
