--- a/app/assets/stylesheets/partials/admin/_mobile.css.sass
+++ b/app/assets/stylesheets/partials/admin/_mobile.css.sass
@@ -49,33 +49,15 @@
         clear: left
         overflow: hidden
 
-        &:hover td.id
-          background: #5BC0DE
-          color: white
-
       td
         display: block
         border: none !important
 
-        &.id
-          float: left
-          background: #5BC0DE
-          color: white
-          font-size: 14px
-          line-height: 14px
-          padding: 3px 6px
-          margin: 8px 0px 8px 4px
-          border-radius: 3px
-
-        &.item
+        &.id, &.item
           float: left
 
         &.actions
           float: right
-
-    &.table-hover
-      tr:hover
-        background: #F5F5F5
 
     &.news
       .image
